Artifactory role - supports MySQL, Service Util - supports start_service

--- a/playbooks/roles/artifactory/tasks/main.yml
+++ b/playbooks/roles/artifactory/tasks/main.yml
@@ -18,8 +18,8 @@
 - include: war.yml
   when:    artifactory.run == 'war'
 
+- include: mysql.yml
+  when:    artifactory.mysql.enabled|bool
+
 - include: import.yml
   when:    import is defined
-
-- include: mysql.yml
-  when:    artifactory.mysql.enabled
