Test repo role - reading variable names dynamically based on a repo name

--- a/playbooks/roles/test-repo/tasks/main.yml
+++ b/playbooks/roles/test-repo/tasks/main.yml
@@ -8,33 +8,19 @@
 - include_vars: "{{ playbook_dir }}/roles/artifactory/vars/main.yml"
 - include_vars: "{{ playbook_dir }}/roles/nexus/vars/main.yml"
 
+# http://docs.ansible.com/faq.html#how-do-i-access-a-variable-name-programmatically
 - set_fact:
-    import_repo:       "{{ artifactory.import.repo }}"
-    user:              "{{ artifactory.auth.user }}"
-    password:          "{{ artifactory.auth.pass }}"
-    repo:              "{{ artifactory.path.artifact }}"
-    upload_path:       "{{ artifactory.path.upload.path }}"
-    upload_method:     "{{ artifactory.path.upload.method }}"
-    quick_search:      "{{ artifactory.path.search.quick }}"
-    groupId_search:    "{{ artifactory.path.search.groupId }}"
-    artifactId_search: "{{ artifactory.path.search.artifactId }}"
-    version_search:    "{{ artifactory.path.search.version }}"
-    gav_search:        "{{ artifactory.path.search.gav }}"
-  when: "'artifactory' in repo_name|lower"
-
-- set_fact:
-    import_repo:       "{{ nexus.import.repo }}"
-    user:              "{{ nexus.auth.user }}"
-    password:          "{{ nexus.auth.pass }}"
-    repo:              "{{ nexus.path.artifact }}"
-    upload_path:       "{{ nexus.path.upload.path }}"
-    upload_method:     "{{ nexus.path.upload.method }}"
-    quick_search:      "{{ nexus.path.search.quick }}"
-    groupId_search:    "{{ nexus.path.search.groupId }}"
-    artifactId_search: "{{ nexus.path.search.artifactId }}"
-    version_search:    "{{ nexus.path.search.version }}"
-    gav_search:        "{{ nexus.path.search.gav }}"
-  when: "'nexus' in repo_name|lower"
+    import_repo:       "{{ hostvars[ inventory_hostname ][ repo_name|lower ].import.repo }}"
+    user:              "{{ hostvars[ inventory_hostname ][ repo_name|lower ].auth.user }}"
+    password:          "{{ hostvars[ inventory_hostname ][ repo_name|lower ].auth.pass }}"
+    repo:              "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.artifact }}"
+    upload_path:       "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.upload.path }}"
+    upload_method:     "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.upload.method }}"
+    quick_search:      "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.quick }}"
+    groupId_search:    "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.groupId }}"
+    artifactId_search: "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.artifactId }}"
+    version_search:    "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.version }}"
+    gav_search:        "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.gav }}"
 
 - debug: msg="import_repo = [{{ import_repo }}]"
 - debug: msg="user = [{{ user }}]"
