Nexus standalone - repos made deployable

--- a/playbooks/roles/nexus/tasks/import.yml
+++ b/playbooks/roles/nexus/tasks/import.yml
@@ -1,18 +1,10 @@
 ---
-- set_fact:
-    import_dir: "{{ nexus.import.home | tokens({ 'home' : nexus.standalone.home }) }}/{{ nexus.import.repo }}"
-  when: nexus.run == 'standalone'
-
-- set_fact:
-    import_dir: "{{ nexus.import.home | tokens({ 'home' : '/root' }) }}/{{ nexus.import.repo }}"
-  when: nexus.run == 'war'
-
 - include: "{{ common.utils.download }}"
   vars:
     title:   Nexus import archive
     url:     "{{ import }}"
     archive: "{{ nexus.import.archive | tokens({ 'ext' : import | ext }) }}"
-    home:    "{{ import_dir }}"
+    home:    "{{ nexus_storage }}/{{ nexus.import.repo }}"
     clean:   false
 
 # https://support.sonatype.com/entries/38605563-Can-I-directly-update-artifacts-in-Nexus-local-storage-on-disk-
