Test repo role - Artifactory SHA1 header is sent in deploy request

--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -50,12 +50,16 @@ artifactory: {
   },
   # https://www.jfrog.com/confluence/display/RTF/Artifactory+REST+API#ArtifactoryRESTAPI-ArtifactSearch%28QuickSearch%29
   # https://www.jfrog.com/confluence/display/RTF/Artifactory+REST+API#ArtifactoryRESTAPI-DeployArtifact
+  # https://www.jfrog.com/confluence/display/RTF/Artifactory+REST+API#ArtifactoryRESTAPI-DeployArtifactbyChecksum
   path: {
     artifact:     /artifactory/<repo>/<artifact>,
     upload: {
       path:       /artifactory/libs-release-local/<artifact>,
       method:     PUT,
-      headers:    []
+      headers:    {
+        'X-Checksum-Deploy': 'true',
+        'X-Checksum-Sha1':   '<sha1>'
+      }
     },
     search: {
       quick:      '/artifactory/api/search/artifact?name=<name>',
