--- a/playbooks/roles/test-repo/tasks/main.yml
+++ b/playbooks/roles/test-repo/tasks/main.yml
@@ -16,6 +16,7 @@
     repo:              "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.artifact }}"
     upload_path:       "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.upload.path }}"
     upload_method:     "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.upload.method }}"
+    upload_headers:    "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.upload.headers }}"
     quick_search:      "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.quick }}"
     groupId_search:    "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.groupId }}"
     artifactId_search: "{{ hostvars[ inventory_hostname ][ repo_name|lower ].path.search.artifactId }}"
@@ -28,6 +29,7 @@
 - debug: msg="repo = [{{ repo }}]"
 - debug: msg="upload_path = [{{ upload_path }}]"
 - debug: msg="upload_method = [{{ upload_method }}]"
+- debug: msg="upload_headers = [{{ upload_headers }}]"
 - debug: msg="quick_search = [{{ quick_search }}]"
 - debug: msg="groupId_search = [{{ groupId_search }}]"
 - debug: msg="artifactId_search = [{{ artifactId_search }}]"
