etcd role - version update and local ip fix

--- a/playbooks/roles/etcd/tasks/main.yml
+++ b/playbooks/roles/etcd/tasks/main.yml
@@ -14,7 +14,7 @@
     home:    "{{ etcd.home }}"
     env:
       # https://github.com/coreos/etcd/blob/master/Documentation/configuration.md
-      ETCD_ADDR:      "{{ common.net.localhost }}:{{ etcd_port }}"
+      ETCD_ADDR:      "{{ common.net.local_ip }}:{{ etcd_port }}"
       ETCD_BIND_ADDR: "{{ common.net.any_ip }}:{{ etcd_port }}"
     tests:
       - { run: "{{ etcd_bin }} --version", expect: "{{ etcd.version }}" }
