--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -13,6 +13,7 @@ common: {
       docker: 2375
     },
     localhost: localhost,
+    local_ip:  127.0.0.1,
     any_ip:    0.0.0.0,
     # https://developers.google.com/speed/public-dns/
     public_dns: "8.8.8.8:53,8.8.4.4:53",
